"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2009-01-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-88:
	  Added some newly requested node attributes "isrvc1", "isrvc2", 
		"isrvc3" for assisting LVS with special keeper configurations.
	  Documented, added one test case.


2008-12-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-87:
	  prsim: implemented active-low data-rails in channels, 
		designated with '~' in ~d:2 of channel declaration command.
	  Documented and tested.


2008-12-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-86:
	  prsim: implemented acknowledgeless channels, which can still be
		watched, logged, and value-checked (expect), but
		cannot be sinks/sources.  (ACX-PR-1998)
		Documented, and tested.  


2008-12-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-85-b:
	  prsim: channel code cleanup reorganize command code to
		use apply and apply-all functions.  


	* HACKT-00-01-04-main-00-82-85:
	  prsim: invariants command now accepts bool/nodes as argument, 
		printing invariants that a node participates in.
		Documented and tested.


	* HACKT-00-01-04-main-00-82-84:
	  prsim: weak-rules command now takes 'hide' or 'show' to control
		whether or not weak rules are displayed in queries.
	  prsim: added 'confirm' and 'noconfirm' commands to turn on/off
		verbose confirmations of asserts.
	  Documented, test cases added.  


2008-12-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-83:
	  Several hacprsim reference parse bugs fixed:
		ACX-PR-1484: ISE on invalid array ref
		ACX-PR-1708: ISE on invalid reference for 'ls'
		ACX-PR-2310: ls accepted invalid reference
		ACX-PR-2400: ISE on invalid reference to getall
	  parsers' yyerror() and yyfreestacks() code factored out into