@@ -1,0 +1,4 @@
+initial seed should be 0s 
+seed48 = 0 0 0
+step a few events in random timing 
+just compare checkpoints... 
