@@ -1,0 +1,17 @@
+# "seed48-02.prsimrc"
+# @haco@ inv.haco-a
+
+# testing setting and resetting of random seed
+
+echo initial seed should be 0s
+seed48
+
+timing random
+echo step a few events in random timing
+set a 0
+cycle
+
+echo make sure reset actually resets the seed
+reset
+seed48
+
