@@ -1,0 +1,5 @@
+initial seed should be 0s 
+seed48 = 0 0 0
+step a few events in random timing 
+make sure reset actually resets the seed 
+seed48 = 0 0 0
