@@ -1,0 +1,5 @@
+initial seed should be 0s 
+seed48 = 0 0 0
+seed48 = 1 2 3
+make sure initialize does NOT resets the seed 
+seed48 = 1 2 3
