@@ -3,6 +3,13 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2009-01-15	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-82-89:
+	  prsim: seed48 is now wiped by the 'reset' command (but not the
+		'initialize' command).  Documented and tested.
+
+
 2009-01-12	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-82-88:
